--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
